Turning the text eng

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Animais Fantásticos</title>
+  <title>Fantastic Animals</title>
 </head>
 
 <body>
@@ -22,24 +22,24 @@
     <nav class="menu">
       <button data-menu="button" arial-expanded="false" aria-controls="menu">Menu</button>
       <ul data-menu="list" id="menu">
-        <li><a data-menu="suave" href="#animais">Animais</a></li>
+        <li><a data-menu="suave" href="#animais">Animals</a></li>
         <li data-dropdown>
-          <a href="sobre.html">Sobre</a>
+          <a href="sobre.html">About</a>
           <ul class="dropdown">
-            <li><a href="empresa.html">Empresa</a></li>
-            <li><a href="equipe.html">Equipe</a></li>
-            <li><a href="socios.html">Sócios</a></li>
-            <li><a href="investidores.html">Investidores</a></li>
+            <li><a href="empresa.html">Company</a></li>
+            <li><a href="equipe.html">Team</a></li>
+            <li><a href="socios.html">Partners</a></li>
+            <li><a href="investidores.html">Investors</a></li>
           </ul>
         </li>
         <li><a data-menu="suave" href="#faq">Faq</a></li>
-        <li><a data-menu="suave" href="#contato">Contato</a></li>
+        <li><a data-menu="suave" href="#contato">Contact</a></li>
         <li><a data-modal="active" href="login.html" target="_blank">Login &rarr;</a></li>
       </ul>
     </nav>
 
     <section class="grid-section animais" data-anima="scroll" id="animais">
-      <h1 class="titulo">Animais Fantásticos</h1>
+      <h1 class="titulo">Fantastic Animals</h1>
 
       <ul class="animais-lista" data-tab="menu">
         <li><img src="./assets/img/imagem1.jpg"></li>
@@ -52,7 +52,7 @@
 
       <div class="animais-descricao" data-tab="content">
         <section data-anima="show-right">
-          <h2>Raposa</h2>
+          <h2>Fox</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quo exercitationem maiores accusamus
             perferendis odit quos quam incidunt veritatis consequuntur eius voluptatum, dolore numquam. Ipsum.</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium consectetur odio libero maxime
@@ -62,7 +62,7 @@
         </section>
 
         <section data-anima="show-down">
-          <h2>Esquilo</h2>
+          <h2>Squirrel</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quo exercitationem maiores accusamus
             perferendis odit quos quam incidunt veritatis consequuntur eius voluptatum, dolore numquam. Ipsum.</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium consectetur odio libero maxime
@@ -72,7 +72,7 @@
         </section>
 
         <section data-anima="show-right">
-          <h2>Urso</h2>
+          <h2>Bear</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quo exercitationem maiores accusamus
             perferendis odit quos quam incidunt veritatis consequuntur eius voluptatum, dolore numquam. Ipsum.</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium consectetur odio libero maxime
@@ -82,7 +82,7 @@
         </section>
 
         <section data-anima="show-down">
-          <h2>Lobo</h2>
+          <h2>Wolf</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quo exercitationem maiores accusamus
             perferendis odit quos quam incidunt veritatis consequuntur eius voluptatum, dolore numquam. Ipsum.</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium consectetur odio libero maxime
@@ -92,7 +92,7 @@
         </section>
 
         <section data-anima="show-right">
-          <h2>Macaco</h2>
+          <h2>Monkeys</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quo exercitationem maiores accusamus
             perferendis odit quos quam incidunt veritatis consequuntur eius voluptatum, dolore numquam. Ipsum.</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium consectetur odio libero maxime
@@ -102,7 +102,7 @@
         </section>
 
         <section data-anima="show-down">
-          <h2>Leão</h2>
+          <h2>Lyon</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quo exercitationem maiores accusamus
             perferendis odit quos quam incidunt veritatis consequuntur eius voluptatum, dolore numquam. Ipsum.</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium consectetur odio libero maxime
@@ -116,36 +116,31 @@
     <section class="grid-section faq" data-anima="scroll" id="faq">
       <h1 class="titulo">FAQ</h1>
       <dl class="faq-lista" data-set="accordion">
-        <dt>Qual a idade dos animais?</dt>
-        <dd>
-          Image result for qual a idade dos animais?
-          Raças pequenas e médias envelhecem aproximadamente 5 anos
-          para cada ano 'humano', enquanto cães de raças grandes envelhecem 6 anos para cada ano nosso
-          e os gigantes envelhecem até 7 anos!</dd>
-
-        <dt>Porque eles são fantásticos?</dt>
-        <dd>Nos Estados Unidos, onde a história se passa, os humanos que não podem conjurar magia não são chamados de
-          “trouxas”, como o público fã de Harry Potter está acostumado. Lá, eles são conhecidos como “não majs”.</dd>
-
-        <dt>Qual a diferença?</dt>
-        <dd>Hoje é lamentável a forma em que o homem vive, ele se destrói a cada minuto, tanto de uma forma carnal, como
-          espiritual.</dd>
-
-        <dt>Como proteger?</dt>
-        <dd>"No caso do agressor ser identificado, cabe ao tutor fazer um registro de um Boletim de Ocorrência, para as
-          medidas legais cabíveis. Se houver algum dano ao animal também cabe uma reparação na esfera cível."</dd>
+        <dt>How many years animals had??</dt>
+        <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet necessitatibus assumenda ducimus ex optio
+          praesentium autem soluta, quos vitae corrupti velit alias officia unde.</dd>
+        <dt>Why are the animals fantastic?</dt>
+        <dd>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat veritatis dolorum harum reprehenderit
+          perspiciatis porro doloribus quia ut.</dd>
+        <dt>Whats the differences?</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus obcaecati aperiam animi rem
+          exercitationem minima necessitatibus similique consequatur, iure tenetur velit consectetur id dolorum culpa
+          voluptatibus cumque vel!</dd>
+        <dt>How to keed they safe?</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae ex veritatis quis dolores, corrupti
+          pariatur hic nam assumenda et.</dd>
       </dl>
     </section>
 
     <section class="grid-section numbers" data-anima="scroll">
-      <h1 class="titulo">Números</h1>
+      <h1 class="titulo">Numbers</h1>
       <div class="numbers-grid">
 
       </div>
     </section>
 
     <section class="grid-section contato" data-anima="scroll" id="contato">
-      <h1 class="titulo">Contato</h1>
+      <h1 class="titulo">Contact</h1>
       <div class="mapa" data-tooltip aria-label="Endereço próximo ao estacionamento">
         <img src="./assets/img/mapa.png">
       </div>
@@ -153,14 +148,14 @@
       <ul class="dados">
         <li>eduardo_sbk589@hotmail.com</li>
         <li>+55 66 9 9604-0062</li>
-        <li>Rua pedrita, nº 21, Rio de janeiro - RJ</li>
-        <li>Doe <span class="btc-price"></span> bitcoin para nos ajudar</li>
-        <li data-week="1,2,3,4,5" data-hour="8,18">Seg á sexta das 8 ás 18</li>
+        <li>Groove street, nº 21, Rio de janeiro - RJ</li>
+        <li>Give us <span class="btc-price"></span> bitcoin for help</li>
+        <li data-week="1,2,3,4,5" data-hour="8,18">Mon / Fri from 8 to 18</li>
       </ul>
     </section>
 
     <footer class="copy">
-      <p>Todos os direitos reservados&copy;</p>
+      <p>All rights reserved &copy;</p>
     </footer>
   </div>
 
@@ -171,9 +166,9 @@
         <label for="email">E-mail:</label>
         <input type="text" for="email" id="email">
 
-        <label for="password">Senha:</label>
+        <label for="password">Password:</label>
         <input type="password" for="password" id="password">
-        <button type="submit">Enter</button>
+        <button type="submit">Login</button>
       </form>
     </div>
   </section>
