Smooth-scroll refactored

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="menu">
       <button data-menu="button" arial-expanded="false" aria-controls="menu">Menu</button>
       <ul data-menu="list" id="menu">
-        <li><a data-menu="suave" href="#animais">Animals</a></li>
+        <li><a data-menu="smooth" href="#animais">Animals</a></li>
         <li data-dropdown>
           <a href="sobre.html">About</a>
           <ul class="dropdown">
@@ -32,8 +32,8 @@
             <li><a href="investidores.html">Investors</a></li>
           </ul>
         </li>
-        <li><a data-menu="suave" href="#faq">Faq</a></li>
-        <li><a data-menu="suave" href="#contato">Contact</a></li>
+        <li><a data-menu="smooth" href="#faq">Faq</a></li>
+        <li><a data-menu="smooth" href="#contato">Contact</a></li>
         <li><a data-modal="active" href="login.html" target="_blank">Login &rarr;</a></li>
       </ul>
     </nav>
