Modal refactore to class component

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
         <dt>How many years animals had??</dt>
         <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet necessitatibus assumenda ducimus ex optio
           praesentium autem soluta, quos vitae corrupti velit alias officia unde.</dd>
-        <dt>Why are the animals fantastic?</dt>
+        <dt>Why the animals are fantastic?</dt>
         <dd>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat veritatis dolorum harum reprehenderit
           perspiciatis porro doloribus quia ut.</dd>
-        <dt>Whats the differences?</dt>
+        <dt>What's the difference?</dt>
         <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus obcaecati aperiam animi rem
           exercitationem minima necessitatibus similique consequatur, iure tenetur velit consectetur id dolorum culpa
           voluptatibus cumque vel!</dd>
