debounce function added

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </section>
 
     <section class="grid-section contato" data-anima="scroll" id="contato">
-      <h1 class="titulo">Contact</h1>
+      <h1 class="titulo">Contact Us</h1>
       <div class="mapa" data-tooltip aria-label="Endereço próximo ao estacionamento">
         <img src="./assets/img/mapa.png">
       </div>
