slide added to the main project

--- a/index.html
+++ b/index.html
@@ -132,6 +132,39 @@
       </dl>
     </section>
 
+    <section class="grid-section gallery" data-anima="scroll">
+      <ul class="custom-controls">
+        <li><img src="./assets/img/img-slide/img1-thumb.png"></li>
+        <li><img src="./assets/img/img-slide/img2-thumb.png"></li>
+        <li><img src="./assets/img/img-slide/img3-thumb.png"></li>
+        <li><img src="./assets/img/img-slide/img4-thumb.png"></li>
+        <li><img src="./assets/img/img-slide/img5-thumb.png"></li>
+        <li><img src="./assets/img/img-slide/img6-thumb.png"></li>
+      </ul>
+      <section class="wrapper">
+        <ul class="slide">
+          <li>
+            <img src="./assets/img/img-slide/img1.png">
+          </li>
+          <li>
+            <img src="./assets/img/img-slide/img2.png">
+          </li>
+          <li>
+            <img src="./assets/img/img-slide/img3.png">
+          </li>
+          <li>
+            <img src="./assets/img/img-slide/img4.png">
+          </li>
+          <li>
+            <img src="./assets/img/img-slide/img5.png">
+          </li>
+          <li>
+            <img src="./assets/img/img-slide/img6.png">
+          </li>
+        </ul>
+      </section>
+    </section>
+
     <section class="grid-section numbers" data-anima="scroll">
       <h1 class="titulo">Numbers</h1>
       <div class="numbers-grid">
