--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </li>
         <li><a data-menu="smooth" href="#faq">Faq</a></li>
         <li><a data-menu="smooth" href="#contato">Contact</a></li>
-        <li><a data-modal="active" href="login.html" target="_blank">Login &rarr;</a></li>
+        <li><a data-modal="active" href="login.html" target="_blank">Login <span class="arrow-black"></span></a></li>
       </ul>
     </nav>
 
@@ -134,32 +134,32 @@
 
     <section class="grid-section gallery" data-anima="scroll">
       <ul class="custom-controls">
-        <li><img src="./assets/img/img-slide/img1-thumb.png"></li>
-        <li><img src="./assets/img/img-slide/img2-thumb.png"></li>
-        <li><img src="./assets/img/img-slide/img3-thumb.png"></li>
-        <li><img src="./assets/img/img-slide/img4-thumb.png"></li>
-        <li><img src="./assets/img/img-slide/img5-thumb.png"></li>
-        <li><img src="./assets/img/img-slide/img6-thumb.png"></li>
+        <li><img src="./assets/img/slide/img1-thumb.png"></li>
+        <li><img src="./assets/img/slide/img2-thumb.png"></li>
+        <li><img src="./assets/img/slide/img3-thumb.png"></li>
+        <li><img src="./assets/img/slide/img4-thumb.png"></li>
+        <li><img src="./assets/img/slide/img5-thumb.png"></li>
+        <li><img src="./assets/img/slide/img6-thumb.png"></li>
       </ul>
       <section class="wrapper">
         <ul class="slide">
           <li>
-            <img src="./assets/img/img-slide/img1.png">
+            <img src="./assets/img/slide/img1.png">
           </li>
           <li>
-            <img src="./assets/img/img-slide/img2.png">
+            <img src="./assets/img/slide/img2.png">
           </li>
           <li>
-            <img src="./assets/img/img-slide/img3.png">
+            <img src="./assets/img/slide/img3.png">
           </li>
           <li>
-            <img src="./assets/img/img-slide/img4.png">
+            <img src="./assets/img/slide/img4.png">
           </li>
           <li>
-            <img src="./assets/img/img-slide/img5.png">
+            <img src="./assets/img/slide/img5.png">
           </li>
           <li>
-            <img src="./assets/img/img-slide/img6.png">
+            <img src="./assets/img/slide/img6.png">
           </li>
         </ul>
       </section>
